<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<Button
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/test_pageindicator1" android:id="@+id/normalbutton" />
	<yunos.tv.widget.PageIndicatorsView 
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/pageindicator1" android:layout_margin="16dp"/>			
	<Button
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/test_pageindicator2" android:id="@+id/normalbuttondisable" />	
	<yunos.tv.widget.PageIndicatorsView 
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/pageindicator2" android:layout_margin="16dp"/>
	<Button
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/test_pageindicator3" android:id="@+id/warningbutton" />
	<yunos.tv.widget.PageIndicatorsView 
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/pageindicator3"
		android:layout_margin="16dp" android:layout_gravity="center_horizontal"/>	
	<Button
		android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:text="@string/show_numberIndicator" android:id="@+id/show_number" />	
	<yunos.tv.widget.NumberIndicator android:layout_width="wrap_content" android:layout_height="wrap_content"
	    android:id="@+id/numberIndicator" />
	<Button
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/hide_numberIndicator" android:id="@+id/hide_number" />
</LinearLayout>

