<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
         android:background="#FFF00000"
         android:minHeight="100dp">
         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_c"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#FFa00000"
        android:gravity="center" >
         <ListView
             android:id="@+id/list"         
           android:layout_width="match_parent"
        	 android:layout_height="wrap_content"
        	 android:layout_gravity="center"></ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FF000000" 
        android:minHeight="100dp">
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_a" 
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_b"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>